// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/glm-4.7-free",
    },
    "executor": {
      "model": "opencode/glm-4.7-free",
    },
    "interpreter": {
      "model": "opencode/glm-4.7-free",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "opencode/glm-4.7-free",
    },
    "planner": {
      "model": "opencode/glm-4.7-free",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
    "scope-analyst": {
      "model": "opencode/glm-4.7-free",
    },
    "workflow-automator": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "interpreter": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "interpreter": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "openai/gpt-5.2",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "opencode/gpt-5-nano",
    },
    "planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "workflow-automator": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "openai/gpt-5.2",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "opencode/gpt-5-nano",
    },
    "planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "workflow-automator": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "interpreter": {
      "model": "google/gemini-3-flash",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "opencode/gpt-5-nano",
    },
    "planner": {
      "model": "google/gemini-3-pro",
    },
    "reviewer": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "scope-analyst": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "workflow-automator": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "google/gemini-3-flash",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "interpreter": {
      "model": "google/gemini-3-flash",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "opencode/gpt-5-nano",
    },
    "planner": {
      "model": "google/gemini-3-pro",
    },
    "reviewer": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "scope-analyst": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "workflow-automator": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "google/gemini-3-flash",
    },
    "librarian": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "google/gemini-3-flash",
    },
    "librarian": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "opencode/gemini-3-flash",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "opencode/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "opencode/gemini-3-flash",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "opencode/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "librarian": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "navigator": {
      "model": "github-copilot/gpt-5-mini",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "librarian": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "navigator": {
      "model": "github-copilot/gpt-5-mini",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/glm-4.7-free",
    },
    "interpreter": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "navigator": {
      "model": "opencode/gpt-5-nano",
    },
    "orchestrator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "planner": {
      "model": "opencode/glm-4.7-free",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
    "scope-analyst": {
      "model": "opencode/glm-4.7-free",
    },
    "workflow-automator": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/glm-4.7-free",
    },
    "interpreter": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "navigator": {
      "model": "opencode/gpt-5-nano",
    },
    "orchestrator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "planner": {
      "model": "opencode/glm-4.7-free",
    },
    "reviewer": {
      "model": "opencode/glm-4.7-free",
    },
    "scope-analyst": {
      "model": "opencode/glm-4.7-free",
    },
    "workflow-automator": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "opencode/gemini-3-flash",
    },
    "librarian": {
      "model": "opencode/glm-4.7-free",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "librarian": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "navigator": {
      "model": "github-copilot/gpt-5-mini",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (librarian uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "interpreter": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (navigator uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "interpreter": {
      "model": "google/gemini-3-flash",
    },
    "librarian": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "navigator": {
      "model": "opencode/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "reviewer": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro-preview",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "google/gemini-3-flash",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "advisor": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "executor": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "interpreter": {
      "model": "google/gemini-3-flash",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "navigator": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "orchestrator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "reviewer": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scope-analyst": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "workflow-automator": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
